# DisciplinaCompiladores

./: README.md
Aula1/: ExemplosAula1.txt  Makefile  lexer  lexer.l  lexer.yy.c
Aula2/: ExemplosAula2.txt  Makefile  calculadora_RPN.l  lexer  lexer.yy.c
Aula3/: ExemplosAula3.txt  Makefile  lexer.l  lexer.yy.c  parser.tab.c  parser.tab.h  parser.y  tinycompiler
Aula4/: ExemplosAula4.txt  lexer.l  lexer.yy.c  miniC.tab.c  miniC.tab.h  miniC.y  tinycompiler
Aula5/: ExemplosAula4.txt  ExemplosAula5.txt  Makefile  VarType.h  lexer.l  lexer.yy.c  miniC.tab.c  miniC.tab.h  miniC.y  tinycompiler
Aula6/: ExemplosAula6.txt  Makefile  VarType.h  lexer.l  lexer.yy.c  miniC.tab.c  miniC.tab.h  miniC.y  tinycompiler
Aula6/miniC-llvm/: CMakeLists.txt  README.md
Aula6/miniC-llvm/src/: main.c
Aula6/miniC-llvm/src/include/: VarType.h
Aula6/miniC-llvm/src/llvm/: codegen.c  codegen.h
Aula6/miniC-llvm/src/parser/: miniC.l  miniC.y
Aula6/miniC-llvm/src/utils/: symbol_table.c
ProjetoCompilador/: .gitignore  BNF.txt  Leiame_FelipeCostaSantos_CtoRISCV.txt  Makefile  output.asm  saidaLLVM.txt
ProjetoCompilador/Exemplos/: BubbleSort.c  Casts.c  Condicionais.c  Crivo.c  DeclaracaoInicializavel.c  DoWhile.c  Escopo.c  ExemplosCondicionais.txt  ExemplosEscopo.txt  ExemplosFor.txt  ExemplosIfs.txt  ExemplosPrintfScanf.txt  ExemplosVetor.txt  For.c  Funcoes.c  Incremento.c  PrintfScanf.c  Semantica.c  Simples.c  Vetor.c  WhileFor.c  WhileForDoWhile.c
ProjetoCompilador/compiler/: lexer.l  parser.y
ProjetoCompilador/include/: UtilsConditionals.h  VarType.h
(+16 files in other folders)
